feat(translate): 屏蔽 qwen3 推理模式并去除 <think> 块
- Cargo.toml 新增 regex = ''1''
- 调整 prompt 强制 qwen3 直接进入翻译，禁用思考
- 用正则过滤掉返回中的 <think>...</think> 整块
- 保持专业术语原文不变

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5", features = [ "shell-open", "fs-all", "path-all", "os-all", "window-all", "http-all", "dialog"] }
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
+regex = "1"
 
 [features]
 # this feature is used for production builds
