feat(tauri): 升级至 v2.0 并补充最小权限配置
- 升级 tauri → 2.0.4，tauri-build → 2.0
- 新增 capabilities/default.json，显式放行
  - dialog:allow-open / dialog:default（文件选择）
  - core:webview:allow-internal-toggle-devtools（F12 调试）
- 其余依赖保持最新 1.x 兼容版本

解决升级后文件对话框与调试工具权限报错。

--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.5.0",
-    "pdfjs-dist": "5.4.296",
-    "vue": "^3.3.0",
-    "pinia": "^2.1.0",
+    "@element-plus/icons-vue": "^2.1.0",
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.4.0",
     "element-plus": "^2.3.0",
-    "@element-plus/icons-vue": "^2.1.0"
+    "pdfjs-dist": "5.4.296",
+    "pinia": "^2.1.0",
+    "vue": "^3.3.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.0",
+    "@tauri-apps/cli": "^2.0.0",
     "@vitejs/plugin-vue": "^4.3.0",
-    "vite": "^4.4.0",
     "unplugin-auto-import": "^0.16.0",
-    "unplugin-vue-components": "^0.25.0"
+    "unplugin-vue-components": "^0.25.0",
+    "vite": "^4.4.0"
   }
 }
