--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,15 +10,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5", features = [] }
+tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5", features = [ "shell-open", "fs-all", "path-all", "os-all", "window-all", "http-all", "dialog"] }
+tauri = { version = "2.0", features = [] }
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 regex = "1"
+tauri-plugin-dialog = "2.0"
 
 [features]
 # this feature is used for production builds
